Form Field Finished

--- a/bower.json
+++ b/bower.json
@@ -23,6 +23,7 @@
     "angular-resource": "~1.4.0",
     "bootstrap": "~3.3.4",
     "angular-route": "~1.4.0",
-    "angular": "~1.4.0"
+    "angular": "~1.4.0",
+    "angular-messages": "~1.4.0"
   }
 }
