--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "main.html",
   "dependencies": {
     "body-parser": "^1.12.4",
+    "bourne": "^0.4.0",
     "express": "^4.12.4",
-    "bourne": "^0.4.0"
+    "express-session": "^1.11.3"
   },
   "devDependencies": {},
   "scripts": {
